--- a/api/appsettings.Development.json
+++ b/api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=18dec.db"
+    "DefaultConnection": "Server=localhost,1433;Database=18decDB;User Id=SA;Password=Password@1;TrustServerCertificate=True"
   }
 }
