End of Section 9

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,12 @@
-{}
+{
+    "mssql.connections": [
+        {
+            "server": "18-dec.database.windows.net",
+            "database": "18decDb",
+            "user": "appuser",
+            "password": "",
+            "authenticationType": "SqlLogin",
+            "encrypt": "Mandatory"
+        }
+    ]
+}
